--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,11 +1,9 @@
-<manifest package="com.dothat.action"
+<manifest package="com.sarality.action"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
   <application android:allowBackup="true"
                android:label="@string/app_name"
-               android:supportsRtl="true"
-  >
-
+               android:supportsRtl="true">
   </application>
 
 </manifest>
