--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'org.slf4j:slf4j-android:1.7.21'
+    compile project(path: ':blocks:log')
     testCompile 'junit:junit:4.12'
 }
