--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(path: ':blocks:log')
-    compile 'org.slf4j:slf4j-android:1.7.21'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':blocks:log')
+    implementation 'org.slf4j:slf4j-android:1.7.21'
+    testImplementation 'junit:junit:4.12'
 }
