--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':blocks:log')
     implementation 'org.slf4j:slf4j-android:1.7.21'
+    implementation 'com.darwinsys:hirondelle-date4j:1.5.1'
     testImplementation 'junit:junit:4.12'
 }
