--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 33
     }
     buildTypes {
         release {
@@ -22,5 +20,8 @@ dependencies {
     implementation project(path: ':blocks:log')
     implementation 'org.slf4j:slf4j-android:1.7.29'
     implementation 'com.darwinsys:hirondelle-date4j:1.5.1'
-    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testImplementation 'junit:junit:4.13.1'
 }
